move social and language options to the top, align columns

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             </h1>
           </div>
 
+          <div class="social-top">
+            <ul>
+              <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
+              <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+              <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+              <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+            </ul>
+          </div>
+
           <div class="lang-options">
             <ul>
               <li><a href="">cat</a> |&nbsp;</li>
@@ -64,14 +73,14 @@
             </ul>
           </div> -->
 
-          <div class="social-left">
+          <!-- <div class="social-left">
             <ul>
               <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
               <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
               <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
               <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="columns">
             <div class="column">
@@ -94,31 +103,31 @@
         </div>
       </div>
 
-        <div id="footer">
-          <div class="footer-imgs">
-
-            <img src="images/Logo Ajuntament d'Alaior blanc.png">
-            <img src="images/Logo Ajuntament de Maó blanc.png">
-            <img src="images/Logo CIME blanc.png">
-            <img src="images/Logo Govern Illes Balears blanc.png">
-            <img src="images/Logo Museu de Menorca blanc.png">
-            <img src="images/Logo UGR blanc.png">
-            <img src="images/Logo UIB blanc.png">
-            <img src="images/Logo UV blanc.png">
-            <img src="images/uab_blanc.png">
-            <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
-          </div>
-
-          <div class="footer-info">
-            <p>Associacio....</p>
-            <ul>
-              <li>Inici</li>
-              <li>Avis legal</li>
-              <li>Cookies</li>
-            </ul>
-          </div>
-        </div>
       </div>
 
+      <div id="footer">
+        <div class="footer-imgs">
+
+          <img src="images/Logo Ajuntament d'Alaior blanc.png">
+          <img src="images/Logo Ajuntament de Maó blanc.png">
+          <img src="images/Logo CIME blanc.png">
+          <img src="images/Logo Govern Illes Balears blanc.png">
+          <img src="images/Logo Museu de Menorca blanc.png">
+          <img src="images/Logo UGR blanc.png">
+          <img src="images/Logo UIB blanc.png">
+          <img src="images/Logo UV blanc.png">
+          <img src="images/uab_blanc.png">
+          <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
+        </div>
+
+        <div class="footer-info">
+          <p>Associacio....</p>
+          <ul>
+            <li>Inici</li>
+            <li>Avis legal</li>
+            <li>Cookies</li>
+          </ul>
+        </div>
+      </div>
   </body>
 </html>
