add dynamic resizing gallery images to fit content-inner container

--- a/index.html
+++ b/index.html
@@ -94,13 +94,28 @@
           </div>
 
           <div class="gallery-wrapper">
-            <img src="http://via.placeholder.com/260x150">
-            <img src="http://via.placeholder.com/260x150">
-            <img src="http://via.placeholder.com/260x150">
-            <img src="http://via.placeholder.com/260x150">
-            <img src="http://via.placeholder.com/260x150">
+            <div>
+              <!-- <img src="http://via.placeholder.com/260x150"> -->
+              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+            </div>
+            <div>
+              <!-- <img src="http://via.placeholder.com/260x150"> -->
+              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+            </div>
+            <div>
+              <!-- <img src="http://via.placeholder.com/260x150"> -->
+              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+            </div>
+            <div>
+              <!-- <img src="http://via.placeholder.com/260x150"> -->
+              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+            </div>
+            <div>
+              <!-- <img src="http://via.placeholder.com/260x150"> -->
+              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+            </div>
+
           </div>
-        </div>
       </div>
 
       </div>
