fix image resizing bug, add wrapping on first column on mobile screen to align headings

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="logo"><img src="images/Amics del Museu de Menorca.png" /></div>
         <div class="content-inside">
-
+  <!-- <div id="logo"><img src="images/Amics del Museu de Menorca.png" /></div> -->
           <div class="name">
             <h1>
               <span>Amics</span>
@@ -84,7 +84,7 @@
 
           <div class="columns">
             <div class="column">
-              <h2>Fes-te soci</h2>
+              <h2>Fes-te <span>soci</span></h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
             </div>
             <div class="column">
@@ -96,23 +96,23 @@
           <div class="gallery-wrapper">
             <div>
               <!-- <img src="http://via.placeholder.com/260x150"> -->
-              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+              <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
               <!-- <img src="http://via.placeholder.com/260x150"> -->
-              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+              <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
               <!-- <img src="http://via.placeholder.com/260x150"> -->
-              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+              <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
               <!-- <img src="http://via.placeholder.com/260x150"> -->
-              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+              <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
               <!-- <img src="http://via.placeholder.com/260x150"> -->
-              <img src="https://news.nationalgeographic.com/content/dam/news/2015/04/24/achaeologygallery/1_archeologygallery_nationalgeographic_611691.jpg">
+              <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
 
           </div>
