--- a/index.html
+++ b/index.html
@@ -94,26 +94,21 @@
           </div>
 
           <div class="gallery-wrapper">
-            <div>
-              <!-- <img src="http://via.placeholder.com/260x150"> -->
+            <!-- <div>
               <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
-              <!-- <img src="http://via.placeholder.com/260x150"> -->
               <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
-              <!-- <img src="http://via.placeholder.com/260x150"> -->
               <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
-              <!-- <img src="http://via.placeholder.com/260x150"> -->
               <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
             </div>
             <div>
-              <!-- <img src="http://via.placeholder.com/260x150"> -->
               <img src="images/1_archeologygallery_nationalgeographic_611691.jpg">
-            </div>
+            </div> -->
 
           </div>
       </div>
@@ -122,27 +117,47 @@
 
       <div id="footer">
         <div class="footer-imgs">
-
-          <img src="images/Logo Ajuntament d'Alaior blanc.png">
-          <img src="images/Logo Ajuntament de Maó blanc.png">
-          <img src="images/Logo CIME blanc.png">
-          <img src="images/Logo Govern Illes Balears blanc.png">
-          <img src="images/Logo Museu de Menorca blanc.png">
-          <img src="images/Logo UGR blanc.png">
-          <img src="images/Logo UIB blanc.png">
-          <img src="images/Logo UV blanc.png">
-          <img src="images/uab_blanc.png">
-          <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
+          <div>
+            <img src="images/Logo Ajuntament d'Alaior blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo Ajuntament de Maó blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo CIME blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo Govern Illes Balears blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo Museu de Menorca blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo UGR blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo UIB blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo UV blanc.png">
+          </div>
+          <div>
+            <img src="images/uab_blanc.png">
+          </div>
+          <div>
+            <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
+          </div>
         </div>
 
         <div class="footer-info">
-          <p>Associacio....</p>
-          <ul>
+          <p>Associació d'Amics del Museu de Menorca ©2018 - Tots els drets reservats.</p>
+          <!-- <ul>
             <li>Inici</li>
             <li>Avis legal</li>
             <li>Cookies</li>
-          </ul>
+          </ul> -->
         </div>
       </div>
+      <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
