make gallery pictures go to corresponding instagram photos

--- a/index.html
+++ b/index.html
@@ -40,15 +40,20 @@
             </ul>
           </div>
 
-          <div class="navigation"><img src="images/Hamburger_icon.svg.png" /></div>
+          <!-- <div class="navigation"><img src="images/Hamburger_icon.svg.png" /></div> -->
+          <input class="burger-check" id="burger-check" type="checkbox">
+          <label for="burger-check" class="burger"></label>
+          <nav id="navigation1" class="navigation">
 
-          <!-- <ul class="navigation">
-            <li class="nav-item"><a href="#">Home</a></li>
-            <li class="nav-item"><a href="#">Portfolio</a></li>
-            <li class="nav-item"><a href="#">About</a></li>
-            <li class="nav-item"><a href="#">Blog</a></li>
-            <li class="nav-item"><a href="#">Contact</a></li>
-          </ul> -->
+            <ul class="navigation">
+              <li class="nav-item"><a href="#">Inici</a></li>
+              <li class="nav-item"><a href="#">Associacio</a></li>
+              <li class="nav-item"><a href="#">Activitats</a></li>
+              <li class="nav-item"><a href="#">Publicacions</a></li>
+              <li class="nav-item"><a href="#">Excavacio arqueológica</a></li>
+              <li class="nav-item"><a href="#">Fes-te amic</a></li>
+            </ul>
+          </nav>
 
           <!-- <input type="checkbox" id="nav-trigger" class="nav-trigger" />
           <label for="nav-trigger"></label> -->
