add burger animation and toggle menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Amics del Museu de Menorca</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Cabin:400,500" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -23,7 +24,7 @@
             </h1>
           </div>
 
-          <div class="social-top">
+          <!-- <div class="social-top">
             <ul>
               <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
               <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
@@ -38,14 +39,19 @@
               <li><a href="">&#32;cast</a> |&nbsp;</li>
               <li><a href="">eng</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <!-- <div class="navigation"><img src="images/Hamburger_icon.svg.png" /></div> -->
-          <input class="burger-check" id="burger-check" type="checkbox">
-          <label for="burger-check" class="burger"></label>
-          <nav id="navigation1" class="navigation">
+          <!-- <div class="burger "><img src="images/Hamburger_icon.svg.png" /></div> -->
+          <button class="hamburger hamburger--spin" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
 
-            <ul class="navigation">
+          <!-- <input class="burger-check" id="burger-check" type="checkbox">
+          <label for="burger-check" class="burger"></label> -->
+          <nav>
+            <ul class="navigation hidden">
               <li class="nav-item"><a href="#">Inici</a></li>
               <li class="nav-item"><a href="#">Associacio</a></li>
               <li class="nav-item"><a href="#">Activitats</a></li>
@@ -69,23 +75,23 @@
             </ul>
           </div> -->
 
-          <!-- <div class="links-right">
+          <div class="links-right">
             <p>contacte</p>
             <ul>
               <li><a href="">cat</a> |&nbsp;</li>
               <li><a href="">&#32;cast</a> |&nbsp;</li>
               <li><a href="">eng</a></li>
             </ul>
-          </div> -->
+          </div>
 
-          <!-- <div class="social-left">
+          <div class="social-left">
             <ul>
               <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
               <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
               <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
               <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
             </ul>
-          </div> -->
+          </div>
 
           <div class="columns">
             <div class="column">
@@ -163,6 +169,7 @@
           </ul> -->
         </div>
       </div>
+      <script src="jquery-3.3.1.min.js"></script>
       <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
