add resized photos in the footer, add plus signs for the columns, add social media links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </button>
 
           <ul class="navigation hidden">
-            <li class="nav-item"><a href="#">Inici</a></li>
+            <li class="nav-item active"><a href="#">Inici</a></li>
             <li class="nav-item"><a href="#">Associacio</a></li>
             <li class="nav-item"><a href="#">Activitats</a></li>
             <li class="nav-item"><a href="#">Publicacions</a></li>
@@ -76,10 +76,10 @@
 
             <div class="social-left mobile-off">
               <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-                <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                <li><a target="_blank" href="https://www.google.es/maps/place/Amics+del+Museu+de+Menor-ca/@39.8910388,4.2579118,17z/data=!3m1!4b1?hl=es"><i class="fa fa-map-marker" aria-hidden="true"></i></a></li>
+                <li><a href="mailto:info@amicsmuseumenorca.org"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/amicsmuseumenorca/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/Associaci%C3%B3-dAmics-del-Museu-de-Menorca-164299626927873/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
               </ul>
             </div>
 
@@ -110,26 +110,27 @@
             <div class="column">
               <div>
                 <!-- <br> -->
-                <h2>Fes-te <span>soci</span></h2>
+                <h2><a href="#">Fes-te <span>soci</span></a></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
+              <p style="font-size: 1.7em">&#43;</p>
             </div>
             <div class="column">
               <div>
-                <h2>Excavació arqueológica </h2>
+                <h2><a href="#">Excavació arqueológica</a></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
+              <p style="font-size: 1.7em">&#43;</p>
             </div>
           </div>
 
-          <div class="gallery-wrapper">
-          </div>
+          <div class="gallery-wrapper"></div>
       </div>
 
       </div>
 
       <div id="footer">
-        <!-- <div class="footer-imgs">
+        <div class="footer-imgs">
           <div>
             <img src="images/Logo Ajuntament d'Alaior blanc.png">
           </div>
@@ -160,41 +161,40 @@
           <div>
             <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
           </div>
-        </div> -->
+        </div>
 
-
-        <div class="section group">
-	<div class="col span_1_of_10">
-	   <img src="images/Logo Ajuntament d'Alaior blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo Ajuntament de Maó blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo CIME blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo Govern Illes Balears blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo Museu de Menorca blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo UGR blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo UIB blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/Logo UV blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	   <img src="images/uab_blanc.png">
-	</div>
-	<div class="col span_1_of_10">
-	  <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
-	</div>
-</div>
+          <!-- <div class="section group footer-imgs">
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo Ajuntament d'Alaior blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo Ajuntament de Maó blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo CIME blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo Govern Illes Balears blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo Museu de Menorca blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo UGR blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo UIB blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/Logo UV blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	   <img src="images/uab_blanc.png">
+          	</div>
+          	<div class="col span_1_of_10">
+          	  <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
+          	</div>
+          </div> -->
 
         <div class="footer-info">
           <p>Associació d'Amics del Museu de Menorca ©2018 - Tots els drets reservats.</p>
