add hover animation for links-right, make mobile burger links smaller

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
             <div class="links-right mobile-off">
               <div class="links-right-content">
-                <p>contacte</p>
+                <p class="lol">contacte</p>
                 <ul>
-                  <li><a href="">cat</a> <span class="separator-desktop">|&nbsp;</span></li>
-                  <li><a href="">&#32;cast</a> <span class="separator-desktop">|&nbsp;</span></li>
-                  <li><a href="">eng</a></li>
+                  <li><a href="" class="lang-option">cat</a> <span class="separator-desktop">|&nbsp;</span></li>
+                  <li><a href="" class="lang-option">&#32;cast</a> <span class="separator-desktop">|&nbsp;</span></li>
+                  <li><a href="" class="lang-option">eng</a></li>
                 </ul>
               </div>
             </div>
