--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
             </h1>
           </div>
 
+          <div class="social-left mobile-off">
+            <ul>
+              <li><a target="_blank" href="https://www.google.es/maps/place/Amics+del+Museu+de+Menor-ca/@39.8910388,4.2579118,17z/data=!3m1!4b1?hl=es"><i class="fa fa-map-marker" aria-hidden="true"></i></a></li>
+              <li><a href="mailto:info@amicsmuseumenorca.org"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://www.instagram.com/amicsmuseumenorca/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://www.facebook.com/Associaci%C3%B3-dAmics-del-Museu-de-Menorca-164299626927873/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+
+          <div class="links-right mobile-off">
+            <div class="links-right-content">
+              <p class="lol">contacte</p>
+              <ul>
+                <li><a href="" class="lang-option">cat</a> <span class="separator-desktop">|&nbsp;</span></li>
+                <li><a href="" class="lang-option">&#32;cast</a> <span class="separator-desktop">|&nbsp;</span></li>
+                <li><a href="" class="lang-option">eng</a></li>
+              </ul>
+            </div>
+          </div>
+
           <!-- <div class="social-top">
             <ul>
               <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
@@ -89,42 +109,23 @@
 
           <div class="picture-main">
 
-            <div class="social-left mobile-off">
+            <!-- <div class="social-left mobile-off">
               <ul>
                 <li><a target="_blank" href="https://www.google.es/maps/place/Amics+del+Museu+de+Menor-ca/@39.8910388,4.2579118,17z/data=!3m1!4b1?hl=es"><i class="fa fa-map-marker" aria-hidden="true"></i></a></li>
                 <li><a href="mailto:info@amicsmuseumenorca.org"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/amicsmuseumenorca/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a target="_blank" href="https://www.facebook.com/Associaci%C3%B3-dAmics-del-Museu-de-Menorca-164299626927873/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
               </ul>
-            </div>
+            </div> -->
 
             <img src="images/Peca ceramica.png"/>
 
-            <div class="links-right mobile-off">
-              <div class="links-right-content">
-                <p class="lol">contacte</p>
-                <ul>
-                  <li><a href="" class="lang-option">cat</a> <span class="separator-desktop">|&nbsp;</span></li>
-                  <li><a href="" class="lang-option">&#32;cast</a> <span class="separator-desktop">|&nbsp;</span></li>
-                  <li><a href="" class="lang-option">eng</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
 
-          <!-- <div class="social-right">
-            <ul>
-              <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-              <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-              <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-              <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-            </ul>
-          </div> -->
+          </div>
 
           <div class="columns">
             <div class="column">
               <div>
-                <!-- <br> -->
                 <h2><a href="#">Fes-te <span>soci</span></a></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
@@ -181,39 +182,6 @@
             <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png"></a>
           </div>
         </div>
-
-          <!-- <div class="section group footer-imgs">
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo Ajuntament d'Alaior blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo Ajuntament de Maó blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo CIME blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo Govern Illes Balears blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo Museu de Menorca blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo UGR blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo UIB blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/Logo UV blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	   <img src="images/uab_blanc.png">
-          	</div>
-          	<div class="col span_1_of_10">
-          	  <img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png">
-          	</div>
-          </div> -->
 
         <div class="footer-info">
           <p>Associació d'Amics del Museu de Menorca ©2018 - Tots els drets reservats.</p>
