--- a/index.html
+++ b/index.html
@@ -37,12 +37,27 @@
           <!-- mobile menu -->
           <div id="mySidenav" class="sidenav desktop-disabled">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <li class="nav-item active"><a href="#">Inici</a></li>
-            <li class="nav-item"><a href="#">Associacio</a></li>
-            <li class="nav-item"><a href="#">Activitats</a></li>
-            <li class="nav-item"><a href="#">Publicacions</a></li>
-            <li class="nav-item"><a href="#">Excavacio arqueológica</a></li>
-            <li class="nav-item"><a href="#">Fes-te amic</a></li>
+            <div class="sidenav-flags">
+              <div><a href="#"><img src="images/flags/flag-Catalonia.svg" /></a></div>
+              <div><a href="#"><img src="images/flags/flag-Spain.svg" /></a></div>
+              <div><a href="#"><img src="images/flags/flag-UK.svg" /></a></div>
+            </div>
+            <div class="sidenav-navigation">
+              <li class="nav-item active"><a href="#">Inici</a></li>
+              <li class="nav-item"><a href="#">Associacio</a></li>
+              <li class="nav-item"><a href="#">Activitats</a></li>
+              <li class="nav-item"><a href="#">Publicacions</a></li>
+              <li class="nav-item"><a href="#">Excavacio arqueológica</a></li>
+              <li class="nav-item"><a href="#">Fes-te amic</a></li>
+            </div>
+            <div class="sidenav-social">
+              <ul>
+                <li><a target="_blank" href="https://www.google.es/maps/place/Amics+del+Museu+de+Menor-ca/@39.8910388,4.2579118,17z/data=!3m1!4b1?hl=es"><i class="fa fa-map-marker" aria-hidden="true"></i></a></li>
+                <li><a href="mailto:info@amicsmuseumenorca.org"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/amicsmuseumenorca/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/Associaci%C3%B3-dAmics-del-Museu-de-Menorca-164299626927873/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              </ul>
+            </div>
           </div>
 
           <span class="mobile-burger desktop-disabled" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
