make navbar with burger menu and logo fixed, add margin to name div

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </div>
           </div>
 
+          <!-- mobile burger -->
           <span class="mobile-burger desktop-disabled" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </nav>
 
@@ -214,7 +215,6 @@
           console.log(document.getElementById("mySidenav"));
           document.getElementById("mySidenav").style.width = "250px";
         }
-
 
         function closeNav() {
           document.getElementById("mySidenav").style.width = "0";
