Fix formatting to work on github

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a href="http://feam.es/"><img src=""></a>
           </div> -->
           <div>
-            <a target="_blank" href="http://www.ajmao.org/"><img src="images/Logo Ajuntament de Maó blanc.png"></a>
+            <a target="_blank" href="http://www.ajmao.org/"><img src="images/Logo Ajuntament de Mao blanc.png"></a>
           </div>
           <div>
             <a target="_blank" href="http://www.cime.es/"><img src="images/Logo CIME blanc.png"></a>
@@ -195,7 +195,7 @@
             <a target="_blank" href="http://www.uab.cat/"><img src="images/uab_blanc.png"></a>
           </div>
           <div>
-            <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educación, Cultura y Deporte blanc.png"></a>
+            <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educacion, Cultura y Deporte blanc.png"></a>
           </div>
         </div>
 
