add top margin for footer, fix columns - make them bigger, darker, remove p top margin

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                 <h2><a href="#">Fes-te <span>soci</span></a></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
-              <p style="font-size: 1.7em">&#43;</p>
+              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;">&#43;</p>
             </div>
             <div class="column">
               <div>
                 <h2><a href="#">Excavació arqueológica</a></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
-              <p style="font-size: 1.7em">&#43;</p>
+              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;">&#43;</p>
             </div>
           </div>
 
