add and remove logos

--- a/index.html
+++ b/index.html
@@ -164,35 +164,25 @@
       <div id="footer">
         <div class="footer-imgs">
           <div>
-            <a target="_blank" href="http://www.alaior.org/"><img src="images/Logo Ajuntament d'Alaior blanc.png"></a>
+            <a target="_blank" href="https://www.museudemenorca.com/es"><img src="images/Logo Museu de Menorca blanc.png"></a>
           </div>
-          <!--  MISSING FILE!! -->
-          <!-- <div>
-            <a href="http://feam.es/"><img src=""></a>
-          </div> -->
+          <div>
+            <a href="http://feam.es/"><img src="images/Logo_FederacionEspanoladeAmigosdeLosMuseos_blanc.png"></a>
+          </div>
+          <div>
+            <a target="_blank" href="http://www.ugr.es/"><img src="images/Logo UGR blanc.png"></a>
+          </div>
           <div>
             <a target="_blank" href="http://www.ajmao.org/"><img src="images/Logo Ajuntament de Mao blanc.png"></a>
+          </div>
+          <div>
+            <a target="_blank" href="http://www.alaior.org/"><img src="images/Logo Ajuntament d'Alaior blanc.png"></a>
           </div>
           <div>
             <a target="_blank" href="http://www.cime.es/"><img src="images/Logo CIME blanc.png"></a>
           </div>
           <div>
             <a target="_blank" href="http://www.caib.es/govern/index.do?lang=ca"><img src="images/Logo Govern Illes Balears blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="https://www.museudemenorca.com/es"><img src="images/Logo Museu de Menorca blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.ugr.es/"><img src="images/Logo UGR blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.uib.es/es/"><img src="images/Logo UIB blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="https://www.uv.es/"><img src="images/Logo UV blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.uab.cat/"><img src="images/uab_blanc.png"></a>
           </div>
           <div>
             <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educacion, Cultura y Deporte blanc.png"></a>
