update logo, add favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/Amics del Museu de Menorca.png">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Cabin:400,500" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
