make logo aligned with the name

--- a/index.html
+++ b/index.html
@@ -94,50 +94,8 @@
             </div>
           </div>
 
-          <!-- <div class="social-top">
-            <ul>
-              <li><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-              <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-              <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-              <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-            </ul>
-          </div>
-
-          <div class="lang-options">
-            <ul>
-              <li><a href="">cat</a> |&nbsp;</li>
-              <li><a href="">&#32;cast</a> |&nbsp;</li>
-              <li><a href="">eng</a></li>
-            </ul>
-          </div> -->
-<!--
-          <button class="hamburger hamburger--spin" type="button">
-            <span class="hamburger-box">
-              <span class="hamburger-inner"></span>
-            </span>
-          </button> -->
-
-          <!-- <input class="burger-check" id="burger-check" type="checkbox">
-          <label for="burger-check" class="burger"></label> -->
-
-
-          <!-- <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-          <label for="nav-trigger"></label> -->
-
           <div class="picture-main">
-
-            <!-- <div class="social-left mobile-off">
-              <ul>
-                <li><a target="_blank" href="https://www.google.es/maps/place/Amics+del+Museu+de+Menor-ca/@39.8910388,4.2579118,17z/data=!3m1!4b1?hl=es"><i class="fa fa-map-marker" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:info@amicsmuseumenorca.org"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/amicsmuseumenorca/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href="https://www.facebook.com/Associaci%C3%B3-dAmics-del-Museu-de-Menorca-164299626927873/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              </ul>
-            </div> -->
-
             <img src="images/Peca ceramica.png"/>
-
-
           </div>
 
           <div class="columns">
@@ -163,40 +121,42 @@
       </div>
 
       <div id="footer">
-        <div class="footer-imgs">
-          <div>
-            <a target="_blank" href="https://www.museudemenorca.com/es"><img src="images/Logo Museu de Menorca blanc.png"></a>
+        <div class="footer-inner">
+          <div class="footer-imgs">
+            <div>
+              <a target="_blank" href="https://www.museudemenorca.com/es"><img src="images/Logo Museu de Menorca blanc.png"></a>
+            </div>
+            <div>
+              <a href="http://feam.es/"><img src="images/Logo_FederacionEspanoladeAmigosdeLosMuseos_blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.ugr.es/"><img src="images/Logo UGR blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.ajmao.org/"><img src="images/Logo Ajuntament de Mao blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.alaior.org/"><img src="images/Logo Ajuntament d'Alaior blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.cime.es/"><img src="images/Logo CIME blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.caib.es/govern/index.do?lang=ca"><img src="images/Logo Govern Illes Balears blanc.png"></a>
+            </div>
+            <div>
+              <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educacion, Cultura y Deporte blanc.png"></a>
+            </div>
           </div>
-          <div>
-            <a href="http://feam.es/"><img src="images/Logo_FederacionEspanoladeAmigosdeLosMuseos_blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.ugr.es/"><img src="images/Logo UGR blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.ajmao.org/"><img src="images/Logo Ajuntament de Mao blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.alaior.org/"><img src="images/Logo Ajuntament d'Alaior blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.cime.es/"><img src="images/Logo CIME blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.caib.es/govern/index.do?lang=ca"><img src="images/Logo Govern Illes Balears blanc.png"></a>
-          </div>
-          <div>
-            <a target="_blank" href="http://www.mecd.gob.es/portada-mecd/"><img src="images/Logo Ministerio de Educacion, Cultura y Deporte blanc.png"></a>
-          </div>
-        </div>
 
-        <div class="footer-info">
-          <p>Associació d'Amics del Museu de Menorca ©2018 - Tots els drets reservats.</p>
-          <ul>
-            <li>Inici</li>
-            <li>Avis legal</li>
-            <li>Cookies</li>
-          </ul>
+          <div class="footer-info">
+            <p>Associació d'Amics del Museu de Menorca ©2018 - Tots els drets reservats.</p>
+            <ul>
+              <li>Inici</li>
+              <li>Avis legal</li>
+              <li>Cookies</li>
+            </ul>
+          </div>
         </div>
       </div>
       <script src="jquery-3.3.1.min.js"></script>
