--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
           <div class="columns">
             <div class="column">
               <div>
-                <h2><a href="#">Fes-te <span>soci</span></a></h2>
+                <h2>Fes-te <span>soci</span></h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
-              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;">&#43;</p>
+              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;"><a href="#">&#43;</a></p>
             </div>
             <div class="column">
               <div>
-                <h2><a href="#">Excavació arqueológica</a></h2>
+                <h2>Excavació arqueológica</h2>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in ante a diam sagittis mollis ac dapibus elit.</p>
-              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;">&#43;</p>
+              <p style="font-size: 1.9em; color: #262828; -webkit-margin-before: 0;"><a href="#">&#43;</a></p>
             </div>
           </div>
 
